--- a/draft-ietf-regext-change-poll.html
+++ b/draft-ietf-regext-change-poll.html
@@ -395,9 +395,13 @@
 <link href="#rfc.section.5" rel="Chapter" title="5 IANA Considerations"/>
 <link href="#rfc.section.5.1" rel="Chapter" title="5.1 XML Namespace"/>
 <link href="#rfc.section.5.2" rel="Chapter" title="5.2 EPP Extension Registry"/>
-<link href="#rfc.section.6" rel="Chapter" title="6 Security Considerations"/>
-<link href="#rfc.section.7" rel="Chapter" title="7 Acknowledgements"/>
-<link href="#rfc.references" rel="Chapter" title="8 Normative References"/>
+<link href="#rfc.section.6" rel="Chapter" title="6 Implementation Status"/>
+<link href="#rfc.section.6.1" rel="Chapter" title="6.1 Verisign EPP SDK"/>
+<link href="#rfc.section.6.2" rel="Chapter" title="6.2 Verisign Consolidated Top Level Domain (CTLD) SRS"/>
+<link href="#rfc.section.6.3" rel="Chapter" title="6.3 Verisign .COM / .NET SRS"/>
+<link href="#rfc.section.7" rel="Chapter" title="7 Security Considerations"/>
+<link href="#rfc.section.8" rel="Chapter" title="8 Acknowledgements"/>
+<link href="#rfc.references" rel="Chapter" title="9 Normative References"/>
 <link href="#rfc.appendix.A" rel="Chapter" title="A Change History"/>
 <link href="#rfc.appendix.A.1" rel="Chapter" title="A.1 Change from 00 to 01"/>
 <link href="#rfc.appendix.A.2" rel="Chapter" title="A.2 Change from 01 to 02"/>
@@ -406,6 +410,7 @@
 <link href="#rfc.appendix.A.5" rel="Chapter" title="A.5 Change from 04 to 05"/>
 <link href="#rfc.appendix.A.6" rel="Chapter" title="A.6 Change from 05 to REGEXT 00"/>
 <link href="#rfc.appendix.A.7" rel="Chapter" title="A.7 Change from REGEXT 00 to REGEXT 01"/>
+<link href="#rfc.appendix.A.8" rel="Chapter" title="A.8 Change from REGEXT 01 to REGEXT 02"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -413,8 +418,8 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Gould, J. and S. Wodjenski" />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-regext-change-poll-01" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-4-17" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-regext-change-poll-02" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-6-23" />
   <meta name="dct.abstract" content="This document describes an Extensible Provisioning Protocol (EPP) extension for notifying clients of operations on client sponsored objects that were not initiated by the client through EPP. These operations MAY include contractual or policy requirements including but not limited to regular batch processes, customer support actions, Uniform Domain-Name Dispute-Resolution Policy (UDRP) or Uniform Rapid Suspension (URS) actions, court directed actions, and bulk updates based on customer requests.  Since the client is not directly involved or knowledgable of these operations, the extension is used along with an EPP object mapping to provide the resulting state of the post-operation object, and optionally a pre-operation object, with the operation meta-data of what, when, who, and why." />
   <meta name="description" content="This document describes an Extensible Provisioning Protocol (EPP) extension for notifying clients of operations on client sponsored objects that were not initiated by the client through EPP. These operations MAY include contractual or policy requirements including but not limited to regular batch processes, customer support actions, Uniform Domain-Name Dispute-Resolution Policy (UDRP) or Uniform Rapid Suspension (URS) actions, court directed actions, and bulk updates based on customer requests.  Since the client is not directly involved or knowledgable of these operations, the extension is used along with an EPP object mapping to provide the resulting state of the post-operation object, and optionally a pre-operation object, with the operation meta-data of what, when, who, and why." />
 
@@ -438,12 +443,12 @@
   <td class="right">S. Wodjenski</td>
 </tr>
 <tr>
-  <td class="left">Expires: October 19, 2017</td>
+  <td class="left">Expires: December 25, 2017</td>
   <td class="right">Neustar</td>
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">April 17, 2017</td>
+  <td class="right">June 23, 2017</td>
 </tr>
 
     	
@@ -451,7 +456,7 @@
   </table>
 
   <p class="title">Change Poll Extension for the Extensible Provisioning Protocol (EPP)<br />
-  <span class="filename">draft-ietf-regext-change-poll-01</span></p>
+  <span class="filename">draft-ietf-regext-change-poll-02</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -463,7 +468,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 19, 2017.</p>
+<p>This Internet-Draft will expire on December 25, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -496,9 +501,13 @@
 </ul><li>5.   <a href="#rfc.section.5">IANA Considerations</a></li>
 <ul><li>5.1.   <a href="#rfc.section.5.1">XML Namespace</a></li>
 <li>5.2.   <a href="#rfc.section.5.2">EPP Extension Registry</a></li>
-</ul><li>6.   <a href="#rfc.section.6">Security Considerations</a></li>
-<li>7.   <a href="#rfc.section.7">Acknowledgements</a></li>
-<li>8.   <a href="#rfc.references">Normative References</a></li>
+</ul><li>6.   <a href="#rfc.section.6">Implementation Status</a></li>
+<ul><li>6.1.   <a href="#rfc.section.6.1">Verisign EPP SDK</a></li>
+<li>6.2.   <a href="#rfc.section.6.2">Verisign Consolidated Top Level Domain (CTLD) SRS</a></li>
+<li>6.3.   <a href="#rfc.section.6.3">Verisign .COM / .NET SRS</a></li>
+</ul><li>7.   <a href="#rfc.section.7">Security Considerations</a></li>
+<li>8.   <a href="#rfc.section.8">Acknowledgements</a></li>
+<li>9.   <a href="#rfc.references">Normative References</a></li>
 <li>Appendix A.   <a href="#rfc.appendix.A">Change History</a></li>
 <ul><li>A.1.   <a href="#rfc.appendix.A.1">Change from 00 to 01</a></li>
 <li>A.2.   <a href="#rfc.appendix.A.2">Change from 01 to 02</a></li>
@@ -507,6 +516,7 @@
 <li>A.5.   <a href="#rfc.appendix.A.5">Change from 04 to 05</a></li>
 <li>A.6.   <a href="#rfc.appendix.A.6">Change from 05 to REGEXT 00</a></li>
 <li>A.7.   <a href="#rfc.appendix.A.7">Change from REGEXT 00 to REGEXT 01</a></li>
+<li>A.8.   <a href="#rfc.appendix.A.8">Change from REGEXT 01 to REGEXT 02</a></li>
 </ul><li><a href="#rfc.authors">Authors' Addresses</a></li>
 
 
@@ -1020,12 +1030,41 @@ END</pre>
 <p id="rfc.section.5.2.p.7">IPR Disclosure: None </p>
 <p id="rfc.section.5.2.p.8">Status: Active </p>
 <p id="rfc.section.5.2.p.9">Notes: None </p>
-<h1 id="rfc.section.6"><a href="#rfc.section.6">6.</a> <a href="#Security" id="Security">Security Considerations</a></h1>
-<p id="rfc.section.6.p.1">The mapping extensions described in this document do not provide any security services beyond those described by <a href="#RFC5730">EPP</a> <cite title="NONE">[RFC5730]</cite> and protocol layers used by EPP. The security considerations described in these other specifications apply to this specification as well.</p>
-<h1 id="rfc.section.7"><a href="#rfc.section.7">7.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
-<p id="rfc.section.7.p.1">The authors wish to acknowledge the original concept for this draft and the efforts in the initial versions of this draft by Trung Tran.</p>
-<p id="rfc.section.7.p.2">Special suggestions that have been incorporated into this document were provided by Michael Holloway.</p>
-<h1 id="rfc.references"><a href="#rfc.references">8.</a> Normative References</h1>
+<h1 id="rfc.section.6"><a href="#rfc.section.6">6.</a> <a href="#Implementation" id="Implementation">Implementation Status</a></h1>
+<p id="rfc.section.6.p.1">Note to RFC Editor: Please remove this section and the reference to <a href="#RFC6982">RFC 6982</a> <cite title="NONE">[RFC6982]</cite> before publication.</p>
+<p id="rfc.section.6.p.2">This section records the status of known implementations of the protocol defined by this specification at the time of posting of this Internet-Draft, and is based on a proposal described in <a href="#RFC6982">RFC 6982</a> <cite title="NONE">[RFC6982]</cite>.  The description of implementations in this section is intended to assist the IETF in its decision processes in progressing drafts to RFCs.  Please note that the listing of any individual implementation here does not imply endorsement by the IETF.  Furthermore, no effort has been spent to verify the information presented here that was supplied by IETF contributors.  This is not intended as, and must not be construed to be, a catalog of available implementations or their features.  Readers are advised to note that other implementations may exist.</p>
+<p id="rfc.section.6.p.3">According to <a href="#RFC6982">RFC 6982</a> <cite title="NONE">[RFC6982]</cite>, "this will allow reviewers and working groups to assign due consideration to documents that have the benefit of running code, which may serve as evidence of valuable experimentation and feedback that have made the implemented protocols more mature.  It is up to the individual working groups to use this information as they see fit".</p>
+<h1 id="rfc.section.6.1"><a href="#rfc.section.6.1">6.1.</a> Verisign EPP SDK</h1>
+<p id="rfc.section.6.1.p.1">Organization: Verisign Inc.</p>
+<p id="rfc.section.6.1.p.2">Name: Verisign EPP SDK</p>
+<p id="rfc.section.6.1.p.3">Description: The Verisign EPP SDK includes both a full client implementation and a full server stub implementation of draft-ietf-regext-change-poll.</p>
+<p id="rfc.section.6.1.p.4">Level of maturity: Production</p>
+<p id="rfc.section.6.1.p.5">Coverage: All aspects of the protocol are implemented.</p>
+<p id="rfc.section.6.1.p.6">Licensing: GNU Lesser General Public License</p>
+<p id="rfc.section.6.1.p.7">Contact: jgould@verisign.com</p>
+<p id="rfc.section.6.1.p.8">URL: https://www.verisign.com/en_US/channel-resources/domain-registry-products/epp-sdks</p>
+<h1 id="rfc.section.6.2"><a href="#rfc.section.6.2">6.2.</a> Verisign Consolidated Top Level Domain (CTLD) SRS</h1>
+<p id="rfc.section.6.2.p.1">Organization: Verisign Inc.</p>
+<p id="rfc.section.6.2.p.2">Name: Verisign Consolidated Top Level Domain (CTLD) Shared Registry System (SRS)</p>
+<p id="rfc.section.6.2.p.3">Description: The Verisign Consolidated Top Level Domain (CTLD) Shared Registry System (SRS) implements the server-side of draft-ietf-regext-change-poll for a variety of Top Level Domains (TLD's).</p>
+<p id="rfc.section.6.2.p.4">Level of maturity: Production</p>
+<p id="rfc.section.6.2.p.5">Coverage: The "after" state poll message for an "update" transform operation of a domain name due to server policy.</p>
+<p id="rfc.section.6.2.p.6">Licensing: Proprietary</p>
+<p id="rfc.section.6.2.p.7">Contact: jgould@verisign.com</p>
+<h1 id="rfc.section.6.3"><a href="#rfc.section.6.3">6.3.</a> Verisign .COM / .NET SRS</h1>
+<p id="rfc.section.6.3.p.1">Organization: Verisign Inc.</p>
+<p id="rfc.section.6.3.p.2">Name: Verisign .COM / .NET Shared Registry System (SRS)</p>
+<p id="rfc.section.6.3.p.3">Description: The Verisign Shared Registry System (SRS) for .COM and .NET implements the server-side of draft-ietf-regext-change-poll.</p>
+<p id="rfc.section.6.3.p.4">Level of maturity: Production</p>
+<p id="rfc.section.6.3.p.5">Coverage: The "after" state poll message for an "update" transform operation of a domain name due to server policy.</p>
+<p id="rfc.section.6.3.p.6">Licensing: Proprietary</p>
+<p id="rfc.section.6.3.p.7">Contact: jgould@verisign.com</p>
+<h1 id="rfc.section.7"><a href="#rfc.section.7">7.</a> <a href="#Security" id="Security">Security Considerations</a></h1>
+<p id="rfc.section.7.p.1">The mapping extensions described in this document do not provide any security services beyond those described by <a href="#RFC5730">EPP</a> <cite title="NONE">[RFC5730]</cite> and protocol layers used by EPP. The security considerations described in these other specifications apply to this specification as well.</p>
+<h1 id="rfc.section.8"><a href="#rfc.section.8">8.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
+<p id="rfc.section.8.p.1">The authors wish to acknowledge the original concept for this draft and the efforts in the initial versions of this draft by Trung Tran.</p>
+<p id="rfc.section.8.p.2">Special suggestions that have been incorporated into this document were provided by Michael Holloway.</p>
+<h1 id="rfc.references"><a href="#rfc.references">9.</a> Normative References</h1>
 <table>
   <tbody>
     <tr>
@@ -1057,6 +1096,12 @@ END</pre>
         <b id="RFC5731">[RFC5731]</b>
       </td>
       <td class="top"><a>Hollenbeck, S.</a>, "<a href="http://tools.ietf.org/html/rfc5731">Extensible Provisioning Protocol (EPP) Domain Name Mapping</a>", STD 69, RFC 5731, DOI 10.17487/RFC5731, August 2009.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="RFC6982">[RFC6982]</b>
+      </td>
+      <td class="top"><a>Sheffer, Y.</a> and <a>A. Farrel</a>, "<a href="http://tools.ietf.org/html/rfc6982">Improving Awareness of Running Code: The Implementation Status Section</a>", RFC 6982, DOI 10.17487/RFC6982, July 2013.</td>
     </tr>
     <tr>
       <td class="reference">
@@ -1109,6 +1154,12 @@ END</pre>
 
 <ol>
   <li>Ping update.</li>
+</ol>
+<h1 id="rfc.appendix.A.8"><a href="#rfc.appendix.A.8">A.8.</a> <a href="#version-WG01-to-WG02" id="version-WG01-to-WG02">Change from REGEXT 01 to REGEXT 02</a></h1>
+<p/>
+
+<ol>
+  <li>Added the Implementation Status section.</li>
 </ol>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Authors' Addresses</a>
